--- a/src/List/Student/student.css
+++ b/src/List/Student/student.css
@@ -5,7 +5,7 @@
   color: black;
   background-color: #f9f9f9;
   font-size: 20px;
-  margin-left: 400px;
+  margin-left: 80px;
 }
 div button {
     margin-left: 12px;
@@ -16,4 +16,8 @@ div button {
     padding: 8px 16px;
     font-size: 20px;
     border-radius: 10px;
+ }
+ .sec{
+    margin-left: 20px;
+    color: #0b61f6;
  }
